--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -27,3 +27,5 @@ $scrollbar-custom-track: #f1f1f1;
 $scrollbar-custom-thumb: #c1c1c1;
 
 $enable-rounded: false;
+
+$table-border-color: $gray-light;
