--- a/src/styles/_examples.scss
+++ b/src/styles/_examples.scss
@@ -1,10 +1,68 @@
+.documentation__endpoints__examples {
+    min-height: 100px;
+    width: 40%;
+    padding: $spacer * 2 10px 0 15px;
+    //padding-top: $spacer * 2;
+    position: relative;
+    background-color: $gray-dark;
+    //background-color: #333;
+    color: #fcfcfc;
+    border-bottom: 1px solid $gray-middlescale;
+
+    .examples__toggle {
+        display: inline-block;
+        float: left;
+        border: 2px solid $gray-lighter;
+        padding: 2px 12px;
+        margin-right: 15px;
+        text-align: center;
+        color: $gray-lighter;
+        background: #555;
+        cursor: pointer;
+        font-size: 1.5em;
+        text-decoration: none;
+        transition: all 0.3s;
+        &:hover {
+            background: $brand-primary;
+        }
+        &:after {
+            content: '<';
+        }
+    }
+
+    &.is-collapsing {
+        position: absolute;
+        height: 100%;
+        top: 0;
+        right: 0;
+        transition: width 0.5s ease;
+    }
+
+    &.is-expanded {
+        position: absolute;
+        //position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        right: 0;
+        z-index: 1100;
+        transition: all 0.5s ease;
+        .examples__toggle {
+            &:after {
+                content: '>';
+            }
+        }
+
+    }
+
+}
+
 .example__tab {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-$background: #9b59b6;
 $tabs-base-color: #555;
 .examples__tabs {
     float: none;
@@ -12,7 +70,7 @@ $tabs-base-color: #555;
     position: relative;
     overflow: hidden;
     padding: 0;
-    margin: 20px 0 0 10px;
+    margin: 30px 0 0 0;
     text-align: left;
     transition: all 0.5s;
     * {
@@ -57,11 +115,36 @@ $tabs-base-color: #555;
 }
 
 .examples__contents {
+    max-height: 400px;
     list-style: none;
     margin: 0;
-    padding: 0 0 0 10px;
+    padding: 0 0 0 5px;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+
+    &::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 1px 0 3px $gray-light;
+        background: $scrollbar-custom-track;
+        border-radius: 0;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        width: 6px;
+        position: relative;
+        left: 1px;
+        border-radius: 1px;
+        -webkit-box-shadow: none;
+        background: $scrollbar-custom-thumb;
+    }
+    //border: 1px solid $gray-lighter;
+    //border-top: none;
 }
 
 .example__content {
@@ -83,10 +166,7 @@ $tabs-base-color: #555;
     }
 
     .example__response {
-        max-height: 400px;
-        //overflow: hidden;
         padding-bottom: 30px;
-        overflow: auto;
 
         &::-webkit-scrollbar {
             width: 8px;
@@ -113,6 +193,17 @@ $tabs-base-color: #555;
 
         span {
             //word-break: break-all;
+        }
+    }
+}
+
+.documentation__endpoints__examples.is-expanded {
+    .examples__contents {
+        max-height: calc(100% - 150px);
+    }
+    .example__content {
+        .example__response {
+            //max-height: calc(100% - 150px);
         }
     }
 }
