--- a/src/index.jade
+++ b/src/index.jade
@@ -2,6 +2,8 @@
 
 // JADE Functions used for TYPES -----------
 
+include schemas.jade
+
 mixin produceTypeNode(t)
 
     //if firstChar is uppercase, it is defined in Types otherwise is default raml type
@@ -25,39 +27,6 @@ mixin getTypesType(type)
                 if index < (types.length - 1)
                     span |
 
-mixin schemasPropsTable(properties)
-
-    div
-        each propObj,index in  properties
-            h5= index
-            table(class='documentation__parameters table')
-                thead
-                    tr
-                        each prop,key in  propObj
-                            th= key
-
-                tbody
-                    tr
-                        each prop,key in  propObj
-                            td
-                                if Object.prototype.toString.call(prop) === '[object Object]'
-                                    +schemasPropsTable(prop)
-
-                                else if Object.prototype.toString.call(prop) === '[object Array]'
-                                    each obj in prop
-                                        ul
-                                            li
-                                            each ob,objKey in obj
-                                                if objKey === 'properties'
-                                                    div
-                                                        +schemasPropsTable(ob)
-                                                else
-                                                    div
-                                                        span= objKey
-                                                        span= " : " + ob
-
-                                else
-                                    span=  prop
 
 mixin typePropsTable( properties)
 
@@ -352,7 +321,7 @@ html(lang="en")
 
                                                 h2(class='documentation__subheader')= 'Response '
                                                 div(class='documentation__response')
-                                                    p(class='text-success') (200)
+                                                    p(class='documentation__response__code text-success') (200)
 
                                                     if endpoint.responseBody["type"]
                                                         span= "Content-Type: "
@@ -444,8 +413,8 @@ html(lang="en")
 
                         //-- TYPES
                         if api.apiAllTypes.length > 0
-                            section(id='allTypes')
-                                h1 All Types
+                            section(class='documentation row' id='allTypes')
+                                h1.documentation__header All Types
                                 div(class="documentation__description")
                                     span All defined data types listed below
                                 #typesContainer
@@ -455,34 +424,28 @@ html(lang="en")
 
                         //-- schemas
                         if api.apiAllSchemas.length > 0
-                            section(id='allTypes')
-                                h1 All Schemas
+                            section(class='documentation row' id='allSchemas')
+                                h1.documentation__header.documentation__header-full All Schemas
                                 div(class="documentation__description")
-                                    span All defined schemas listed below
-                                #typesContainer
+                                    span All defined schemas are listed below.
+                                div(class="documentation")
                                     - var excluded = ["required", "$schema"]
+                                    //generate schemas table
+                                    each schemaObj in api.apiAllSchemas
 
-                                    each typeObj in api.apiAllSchemas
-                                        //generate types table
-
-                                        each ob, index in typeObj
-                                            div
+                                        each ob, index in schemaObj
+                                            div(class="documentation__schemas")
                                                 h4(id='schemas-' + index)= index
-                                                table
-                                                    thead
-                                                        tr
-                                                        each o,key in ob
-                                                            if excluded.indexOf(key) < 0
-                                                                th= key
-                                                    tbody
-                                                        tr
-                                                        each val,key in ob
-                                                            if excluded.indexOf(key) < 0
-                                                                if key != "properties"
-                                                                    td= val
-                                                                else
-                                                                    +schemasPropsTable(val)
-
+                                                each o,key in ob
+                                                    // exclude unwanted keys from listing
+                                                    if excluded.indexOf(key) < 0
+                                                        p(class='schema__key')
+                                                            strong= key + ': '
+                                                            if key != "properties"
+                                                                span= o
+                                                        if key == "properties"
+                                                            // list all schema properties
+                                                            +schemaProperties(o)
 
 
 
@@ -602,10 +565,6 @@ html(lang="en")
 
                                                                 if auth.description
                                                                     td= auth.description
-
-
-
-
 
 
 
