--- a/src/styles/_schemas.scss
+++ b/src/styles/_schemas.scss
@@ -23,7 +23,7 @@
     margin-left: 20px;
     margin-top: 5px;
     border-left: 1px solid $gray-light;
-    padding: 0 0 15px 5px;
+    padding: 0 0 15px 10px;
 }
 
 .schema__properties__header {
@@ -31,15 +31,33 @@
     border-bottom: 1px solid $gray-light;
     font-size: 0.75rem;
     margin: 10px 0 5px;
-    margin-left: -5px;
+    margin-left: -10px;
     padding-left: inherit;
     color: $brand-primary;
+
+    .schema__properties__keys {
+        &:after {
+            content: none;
+        }
+    }
 
 }
 
 .schema__properties__keys {
+    position: relative;
     display: inline-block;
-    width: 150px;
+    min-width: 150px;
+    padding-right: 10px;
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        margin-left: -10px;
+        width: 10px;
+        background: $gray-light;
+        height: 1px;
+        top: 50%;
+    }
 }
 
 .schema__properties__vals {
@@ -48,6 +66,7 @@
 }
 
 .schema__property {
+    position: relative;
     font-size: 1rem;
     line-height: 1.5;
 }
